syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "Key_manager_grpc";
option objc_class_prefix = "HLW";

package br.com.zup;

import "google/protobuf/timestamp.proto";

service KeyManagerGrpcService {
  rpc registra(RegistrarChavePixRequest) returns (RegistrarChavePixResponse) {}
}

service KeyManagerRemoveGrpcService {
  rpc remove(RemoveChavePixRequest) returns (RemoveChavePixResponse) {}
}

service KeyManagerConsultaGrpcService {
  rpc consulta (ConsultaChavePixRequest) returns (ConsultaChavePixResponse) {}
  rpc consultaTodas(ListaChavePixRequest) returns (ListaChavePixResponse){}
}

enum TipoChavePix {
  UNKNOWN_CHAVE_PIX = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  CHAVE_ALEATORIA = 4;
}

enum TipoConta {
  UNKNOWN_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message RegistrarChavePixRequest {
  string clienteId = 1;
  TipoChavePix tipo = 2;
  string chave = 3;
  TipoConta conta = 4;
}

message RegistrarChavePixResponse {
  string pixID = 1;
  string clienteId = 2;
}

message RemoveChavePixRequest {
  string pixID = 1;
  string clienteId = 2;
}

message RemoveChavePixResponse {
  string pixID = 1;
  string clienteId = 2;
}

message ConsultaChavePixRequest {
  message FiltroPorPix {
    string clientId = 1;
    string pixId = 2;
  }
  oneof filtro {
    FiltroPorPix pixId = 1;
    string chave = 2;
  }
}

message ConsultaChavePixResponse {
  message ChavePix {
    message ContaInfo {
      TipoConta tipoDeConta = 1;
      string instituicao = 2;
      string nomeDoTitular = 3;
      string cpfDoTitular = 4;
      string agencia = 5;
      string numeroDaConta = 6;
    }
    TipoChavePix tipoDeChave = 1;
    string chave = 2;
    ContaInfo conta = 3;
    google.protobuf.Timestamp criadaEm = 4;
  }
  string clientId = 1;
  string pixId = 2;
  ChavePix chave = 3;
}

message ListaChavePixRequest {
  string clientId = 1;
}

message ListaChavePixResponse {
  message DetalhesChave {
    string clientId = 1;
    string  pixId = 2;
    TipoChavePix tipoChave = 3;
    string valorChave = 4;
    string chave = 5;
    TipoConta tipoConta = 6;
    google.protobuf.Timestamp criadoEm = 7;

  }
  string clientId = 1;
  repeated DetalhesChave chavesPix = 2;
}